--- a/TimetableManagementSystem/.classpath
+++ b/TimetableManagementSystem/.classpath
@@ -14,20 +14,21 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -37,5 +38,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/sreek/Downloads/jar_files/byte-buddy-1.14.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sreek/Downloads/jar_files/mockito-core-5.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sreek/Downloads/jar_files/objenesis-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sreek/Downloads/jar_files/byte-buddy-agent-1.14.10.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
