--- a/TimetableManagementSystem/pom.xml
+++ b/TimetableManagementSystem/pom.xml
@@ -1,14 +1,78 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>TimetableManagementSystem</groupId>
   <artifactId>TimetableManagementSystem</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-	 <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver-sync</artifactId>
-        <version>4.2.3</version> <!-- Use the latest version -->
-   	</dependency>
-  </dependencies>
-  
+</project> -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+ 	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>PUT_LATEST_VERSION_HERE</version>
+            <configuration>
+                <!-- PIT configuration options go here -->
+            </configuration>
+        </plugin>
+    </plugins>
+	</build>
+    <groupId>com.Student</groupId>
+    <artifactId>YourProject</artifactId>
+    <version>1.0-SNAPSHOT</version>
+ 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+ 	
+    <dependencies>
+        <!-- MongoDB Java Driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.10</version> <!-- Replace with the latest version -->
+        </dependency>
+        <dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongodb-driver-sync</artifactId>
+    <version>4.3.0</version> <!-- Use the latest version -->
+</dependency>
+<!-- JUnit 4 -->
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.1</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.12.4</version> <!-- Use the latest version available -->
+    <scope>test</scope>
+</dependency>
+ 
+    <!-- JUnit Jupiter API and Assertions -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.1</version> <!-- Replace with the latest version -->
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.8.1</version> <!-- Replace with the latest version -->
+        <scope>test</scope>
+    </dependency>
+   
+
+ 	
+    </dependencies>
+    
+    
 </project>
